--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
 		</div>
 	</div>
 	<script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="js/recipe-dist.js"></script>
+<!--	<script src="js/recipe-dist.js"></script>-->
+	<script src="js/recipe.js"></script>
 </body>
 </html>
